--- a/listcols.Rmd
+++ b/listcols.Rmd
@@ -199,5 +199,62 @@ nsduh_df
 
 ```
 
+### Linear regression on weather data
 
+```{r}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USW00022534", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2021-01-01",
+    date_max = "2022-12-31") |>
+  mutate(
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USW00022534 = "Molokai_HI",
+      USS0023B17S = "Waterhole_WA"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) |>
+  select(name, id, everything())
+
+weather_nest_df =
+  weather_df |>
+  nest(df = date:tmin)
+
+weather_nest_df
+```
+
+Regress `tmax` and `tmin` on each of these?
+
+```{r}
+central_park_df =
+  weather_nest_df |>
+  pull(df) |>
+  nth(1)
+```
+
+```{r}
+weather_lm = function(df) {
+  lm(tmax ~ tmin, data = df)
+}
+
+weather_lm(central_park_df)
+```
+
+For loop:
+
+```{r}
+input_list = weather_nest_df |> pull(df)
+output = vector("list", length = 3) 
+
+for (i in 1:3) {
+  output[[i]] = weather_lm(input_list[[i]])
+}
+
+output
+
+weather_nest_df |>
+  mutate(models = map(df, weather_lm))
+```
 
